<resources>

    <string name="app_name">Note To Record</string>
    <string name="action_settings">Settings</string>
    <string name="confirm">Confirmar</string>
    <string name="meaning">Significado</string>
    <string name="phrase">Termo</string>
    <string name="next">Proximo</string>
    <string name="search">Procurar</string>
    <string name="mode">Modo</string>
    <string name="type_your_note_here">Digite sua anotação aqui</string>
    <string name="preference_file_key">widget_notes</string>
    <string name="show">Mostrar</string>
    <string name="check">Check</string>
    <string name="add_item">Adicionar itens</string>
    <string name="add">Adicionar</string>
    <string name="press_to_edit">Toque e segure para editar os itens</string>
    <string name="config">Configurações</string>
    <string name="review">Revisão</string>
    <string name="gapDaysReview">Days to next review</string>
    <string name="gap_days_review">Dias para a proxima revisão</string>
    <string name="review_per_time">Revisão por vez</string>
    <string name="review_times">Repetir revisão</string>
    <string name="summary_gap_days">Intervalo de dias a esperar para a proxima revisão</string>
    <string name="summary_times">Quantas vezes preciso checar para concluir a revisão</string>
    <string name="selected">selecionado(s)</string>
    <string name="no_words">Não há palavras para revisar</string>
    <string name="checked">Check</string>
    <string name="reviewed">Ultima revisão</string>
    <string name="edit">Editar</string>
    <string name="there_is_this_word">Está palavra ja está cadastrada</string>
    <string name="credits">Creditos</string>
    <string name="translation_to_french">Tradução para o francês</string>
    <string name="version">Versão</string>
    <string name="versionName">1.3</string>
    <string name="license">Licença</string>
    <string name="manage_cards">Gerenciar cartões</string>
    <string name="manage_memos">Gerenciar memos</string>
    <string name="void_word">Palavra vazia!</string>
    <string name="resize_text">Redimensionar texto do widget</string>
    <string name="summary_resize_text">Redimensionar texto do widget quando o widget tambem for redimensionado</string>
    <string name="save_data">Fazer backup dos dados no cartão SD?</string>
    <string name="cancel">Cancelar</string>
    <string name="restore_data">Restaurar dados do cartão SD?</string>
    <string name="message_restore">Isto irá apagar quaisquer dados ja existentes, tem certeza?</string>
    <string name="data_saved">Dados salvos no cartão SD/Documents</string>
    <string name="not_possible_save">Não é possivel salvar o arquivo!</string>
    <string name="restored">Dados restaurados</string>
    <string name="not_possible_restore">Não foi possivel restaurar os dados</string>
    <string-array name="modes">
        <item>Sticky note</item>
        <item>Flash cards</item>
        <item>Remember</item>
    </string-array>
    <string-array name="modes_desc">
        <item>Neste modo, o texto apenas aparecerá no widget</item>
        <item>Flashcards são cartões onde num lado você anota uma palavra/coisa e no outro, seu significado, para tentar memoriza-los. Mais informações nas configurações</item>
        <item>Neste modo, são exibidas as palavras/coisas cadastradas e seus significados, para ajudar a memorizar, tendo a opção de marcar se ja sabe. Mais informações nas configurações</item>
    </string-array>
    <item name="manage_cards" type="id">Gerenciar cartões</item>
</resources>
