<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize"

        android:paddingBottom="58dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@drawable/separator">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phrase"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <org.droidparts.widget.ClearableEditText
                android:id="@+id/key_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#220099"
                android:maxLength="255"
                android:ems="10" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@drawable/separator">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meaning"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <org.droidparts.widget.ClearableEditText
                android:id="@+id/key_definition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#aa0033"
                android:maxLength="255"
                android:ems="10" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/separator_checked"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@drawable/separator">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/checked"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <CheckBox
                android:id="@+id/checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_marginLeft="48dp">
            </CheckBox>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/separator_review"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/separator">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviewed"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"/>

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/datePicker"
                android:calendarViewShown="false"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>