
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--android:background="@drawable/fundo"-->
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal">
      <TextView
          android:layout_width="20dp"
          android:layout_height="match_parent"
          android:background="@drawable/barbela_repeat"/>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"

          android:layout_marginBottom="10dp"
          android:orientation="vertical"
          android:id="@+id/widget"
          >
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="12sp"
              android:paddingTop="10dp"
              android:textColor="#220099"
              android:inputType="textMultiLine"
              android:id="@+id/word"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="12sp"

              android:paddingTop="20dp"
              android:textColor="#aa0033"
              android:inputType="textMultiLine"
              android:id="@+id/definition"/>
      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom"
          android:gravity="bottom"

          android:id="@+id/buttons"
          android:orientation="horizontal" >

          <TextView
              android:id="@+id/knowed"
              android:layout_width="0dip"
              android:layout_weight=".5"
              android:layout_height="match_parent"
              android:visibility="gone"
              android:textColor="#666666"
              android:text="@string/check"
              android:textSize="12sp"
              android:background="#00000000"
              android:gravity="bottom"
              android:paddingBottom="12dp"
              android:paddingTop="10dp"
              />
          <TextView
              android:layout_width="0dip"
              android:layout_weight=".5"
              android:layout_height="match_parent"
              android:visibility="visible"
              android:textColor="#666666"
              android:background="#00000000"
              android:id="@+id/nknowed"
              android:text="@string/show"
              android:textSize="12sp"
              android:gravity="bottom"
              android:paddingBottom="12dp"
              android:paddingTop="10dp"
              />
          <TextView
              android:layout_width="0dip"
              android:layout_height="match_parent"
              android:layout_weight=".5"
              android:textColor="#666666"
              android:background="#00000000"
              android:id="@+id/next"
              android:visibility="visible"
              android:text="@string/next"
              android:textSize="12sp"
              android:gravity="bottom"
              android:paddingBottom="12dp"
              android:paddingTop="10dp"
              />
      </LinearLayout>
  </LinearLayout>
</FrameLayout>